add image capability

--- a/src/main/resources/htmlToPdfSaxManual.html
+++ b/src/main/resources/htmlToPdfSaxManual.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-<img src="../resources/shield_tuf.gif" width="102" height="134" alt="TUF weapon shield" border="0" align="right"/>
+<img src="/shield_tuf.gif" width="102" height="134" alt="TUF weapon shield" border="0" align="right"/>
 <h1>Technological University of Foobar</h1>
 <h2>Department of Computer Science and Engineering</h2>
 Welcome to the Department of Computer Science and Engineering at the Technological University of Foobar.
